[project]
name = "time-series-prediction-for-air-quality"
version = "0.1.0"
description = ""
authors = [
    { name = "xiyao", email = "xiyao.li0218@gmail.com" }
]
readme = "README.md"
requires-python = "3.11.8"


[tool.poetry.dependencies]
dotenv = "^0.9.9"
psycopg2-binary = "2.9.10"
sqlalchemy = "^2.0.39"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
